Add chat App with Steps

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,13 @@
 
 akka {
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   actor {
     debug {
       # enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill etc.)
-      autoreceive = on
+      autoreceive = off
       # enable DEBUG logging of subscription changes on the eventStream
-      receive = on
-      fsm = on
+      receive = off
+      fsm = off
     }
   }
 }
