add example and move simple examples

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,3 +19,6 @@ akka.remote.artery {
 }
 
 akka.stream.materializer.debug-logging = on
+
+akka.http.server.idle-timeout = 10m
+akka.http.client.idle-timeout = 10m
